# booze

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  build.sh  build_booze.sh
config/: core_system.json
debug/: CMakeCache.txt  Makefile  cmake_install.cmake
include/commands/: command.hpp  install.hpp  uninstall.hpp
include/console/: logger.hpp  shell.hpp
include/core/: package.hpp  package_manager.hpp  pkg.h  pm.h  system.hpp  tasks.h  thread_pool.hpp
include/core/cmd/: cmd.h  pkgcmd.h  pmcmd.h
include/core/cmd/pkg/: info.h  install.h  isinstalled.h  uninstall.h  upgrade.h
include/core/cmd/pm/: list.h  search.h
include/gui/: main_window.hpp
include/gui/views/: package_manager_view.hpp  package_view.hpp
include/logger/: log_factory.hpp  log_level.hpp  logger.hpp
include/logger/log/: error_log.hpp  info_log.hpp  log.hpp  warning_log.hpp
include/parser/: brew_parser.hpp  package_manager_parser.hpp
include/ui/views/: package_manager_view.hpp  package_view.hpp
include/views/: package_manager_view.hpp  package_view.hpp
src/: main.cpp
src/commands/: command.cpp
src/console/: logger.cpp
src/core/: package.cpp  package_manager.cpp  pkg.cpp  system.cpp  tasks.cpp  thread_pool.cpp
src/core/cmd/: cmd.cpp
src/gui/: main_window.cpp
src/gui/views/: package_view.cpp
src/logger/: log_factory.cpp  log_level.cpp  logger.cpp
src/logger/log/: error_log.cpp  info_log.cpp  log.cpp  warning_log.cpp
src/parser/: brew_parser.cpp  package_manager_parser.cpp
src/ui/views/: package_view.cpp
src/views/: package_manager_view.cpp  package_view.cpp
